Applies the new feature on the jdk 11 version